--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -92,12 +92,12 @@
     resize: none;
 }
 
-@media screen and (max-width : 992) {
+@media screen and (max-width : 992px) {
     .contact-container{
         column-gap: 3rem;
     }
 }
-@media screen and (max-width : 768) {
+@media screen and (max-width : 768px) {
     .contact-container{
         grid-template-columns: 1fr;
         row-gap: 3rem;
@@ -109,7 +109,7 @@
         margin: 0 auto;
     }
 }
-@media screen and (max-width : 576) {
+@media screen and (max-width : 576px) {
     .contact-info{
         grid-template-columns: 1fr;
     }
