--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -50,6 +50,10 @@
 .skills-level{
   font-size: var(--tiny-font-size);
 }
+.skills-image{
+    height: 50px;
+    width: 50px;
+}
 
 /* For large devices */
 @media screen and (max-width: 992px) {
